--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
-<!doctype html>
-
-<html>
-<head>
-  <meta charset="utf-8">
-
-  <title>Tim Naumann</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
-  <h1> Under construction </h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section class="landing">
+      <div class="container">
+        <div class="left">
+          <p>tim</p>
+        </div>
+        <div class="right">
+          <div class="naumann">
+            <p><span class="underscore">_</span>naumann</p>
+          </div>
+          <div class="tag">
+            <p id="tag">web developer//</p>
+            <p>copywriter</p>
+          </div>
+          <div class="info">
+            <div class="text">
+              <p>
+                This website is currently undergoing a re-design. If you like,
+                you can visit one of my other web appearences.
+              </p>
+            </div>
+            <div class="icons">
+              <i class="fab fa-github-square"></i>
+              <i class="fab fa-linkedin color-teal"></i>
+              <i class="fab fa-xing-square color-orange"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://kit.fontawesome.com/d1fe03bc0d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
