--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spartan:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <section class="landing">
-      <div class="container">
-        <div class="left">
-          <p>tim</p>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <div class="menu">
+
         </div>
-        <div class="right">
-          <div class="naumann">
-            <p><span class="underscore">_</span>naumann</p>
-          </div>
-          <div class="tag">
-            <p id="tag">web developer//</p>
-            <p>copywriter</p>
-          </div>
-          <div class="info">
-            <div class="text">
-              <p>
-                This website is currently undergoing a re-design. If you like,
-                you can visit one of my other web appearences.
-              </p>
-            </div>
-            <div class="icons">
-              <i class="fab fa-github-square"></i>
-              <i class="fab fa-linkedin color-teal"></i>
-              <i class="fab fa-xing-square color-orange"></i>
-            </div>
-          </div>
+    </nav>
+    <section id="home">
+        <div class="central">
+            <div class="firstname"><h1 id="firstname">tim_</h1></div>
+            <div class="lastname"><h1 id="lastname">naumann</h1></div>
         </div>
-      </div>
+        <div class="central">
+            <div class="webdeveloper"><h1 id="webdeveloper">web developer// </h1></div>
+            <div class="copywriter"><h1 id="copywriter">copywriter</h1></div>
+        </div>
     </section>
-    <script
-      src="https://kit.fontawesome.com/d1fe03bc0d.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <section id="about">
+        <div class="headline">
+            <h1 id="headline">about</h1>
+        </div>
+        <div class="text">
+            <p>
+                cdkhcbkscbksjdcbkjscksjbckjsdbckjsbkcjbskjcbksjbckjsbckjsbdkcjbskjdcbksjdbcksdc
+                sjkdcbjksdhbcjhsbcjhbsdjhcbjshbcjhsbcjhsbjcdhbjscbhjsdc
+                sckjbsdjkhcbjsdhbcjhsbdcjhbsjcbjshbcjhsbcjhsbjdchbsjdhcbjsdhcbjsdhbc
+                sdkcbskjcbksdjbcksjdbckjsdbcksdjcbksdjcb
+            </p>
+        </div>
+    </section>
+    
+</body>
 </html>
