changed overlay card description

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
             <div class="card-overlay ">
               <div class="card-overlay-content"> 
                 <p>
-                  Web-App, die die Spotify Api nutzt, 
-                  um Playlist-Optionen 
-                  und zusätzliche Funktionen für Hörspiele hinzuzufügen. Tech-Stack: MERN
+                  Under Construction!
                </p>  
                <div class="card-buttons">
                 <a href="#">GitHub</a>
