added under construction disclaimer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </ul>
     </nav>
     <section class="home" id="home">
+      <h4 style="align-self:center;">this page is still under construction</h4>
       <div class="center-content">
         <div class="name">
           <h1>tim<span class="underscore">_</span></h1>
