added animations on project cards

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     ></script>
   </head>
   <body>
+    <div class="vertical-bar"></div>
     <nav>
       <div class="logo-menu">
         <div class="line1"></div>
@@ -57,7 +58,7 @@
     <section class="projects" id="projects">
       <h2>projekte</h2>
       <div class="cards">
-        <div class="card">
+        <!-- <div class="card-1">
           <div class="icon">
             <i class="fab fa-spotify spinner"></i>
             <div class="card-overlay ">
@@ -65,26 +66,81 @@
                 <p>
                   Under Construction!
                </p>  
-               <div class="card-buttons">
-                <a href="#">GitHub</a>
-                <p>Close</p>
+               <div class="card-overlay-buttons">
+                <button><a href="#">GitHub</a></button>
+                <button>Close</button>
                </div>
               </div>
                 
             </div>
           </div>
           <p class="card-description">Spotify Web Api</p>
+        </div> -->
+        <div class="card">
+          <div class="icon">
+            <i class="fab fa-spotify spinner"></i>
+            <div class="card-overlay">
+              <div class="card-overlay-content">
+                <p>
+                  Web-App, die über die Spotify-Web-API verschiedene 
+                  Funktionen speziell zum anhören von Hörspielen hinzufügt. 
+                  Tech-Stack: MERN
+                </p>
+              </div>
+              <div class="card-overlay-buttons">
+                <button><a href="#">Git-Hub</a></button>
+                <button class="btn-close">Close</button>
+              </div>
+            </div>
+          </div>
+          <p class="card-description">Spotify Web App</p>
         </div>
         <div class="card">
-          <div class="icon"><span class="spinner">&#x1f0a1;</span></div>
+          <div class="icon">
+            <span class="spinner">&#x1f0a1;</span>
+            <div class="card-overlay">
+              <div class="card-overlay-content">
+                <p>Under Construction</p>
+              </div>
+              <div class="card-overlay-buttons">
+                <button><a href="#">Git-Hub</a></button>
+                <button class="btn-close">Close</button>
+              </div>
+            </div>
+          </div>
           <p class="card-description">Mau Mau Spiel</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-university spinner"></i></div>
+          <div class="icon">
+            <i class="fas fa-university spinner"></i>
+            <div class="card-overlay">
+              <div class="card-overlay-content">
+                <p>Under construction</p>
+              </div>
+              <div class="card-overlay-buttons">
+                <button><a href="#">Git-Hub</a></button>
+                <button class="btn-close">Close</button>
+              </div>
+            </div>
+          </div>
           <p class="card-description">Banking App Light</p>
         </div>
         <div class="card">
-          <div class="icon"><i class="fas fa-globe spinner"></i></div>
+          <div class="icon">
+            <i class="fas fa-globe spinner"></i>
+            <div class="card-overlay">
+              <div class="card-overlay-content">
+                <p>
+                  Single-Page UI/UX. Puristisches Vergnügen mit HTML, CSS/SCSS 
+                  und einer Prise JavaScript.
+                </p>
+              </div>
+              <div class="card-overlay-buttons">
+                <button><a href="#">Live Demo</a></button>
+                <button class="btn-close">Close</button>
+              </div>
+            </div>
+          </div>
           <p class="card-description">Example Website</p>
         </div>
       </div>
