adjusted arrow position and card icon because of display issues with samsung mobile browser

--- a/index.html
+++ b/index.html
@@ -75,24 +75,6 @@
     <section class="projects" id="projects">
       <h2>projekte</h2>
       <div class="cards">
-        <!-- <div class="card-1">
-          <div class="icon">
-            <i class="fab fa-spotify spinner"></i>
-            <div class="card-overlay ">
-              <div class="card-overlay-content"> 
-                <p>
-                  Under Construction!
-               </p>  
-               <div class="card-overlay-buttons">
-                <button><a href="#">GitHub</a></button>
-                <button>Close</button>
-               </div>
-              </div>
-                
-            </div>
-          </div>
-          <p class="card-description">Spotify Web Api</p>
-        </div> -->
         <div class="card">
           <div class="icon">
             <i class="fab fa-spotify spinner"></i>
@@ -114,7 +96,7 @@
         </div>
         <div class="card">
           <div class="icon">
-            <span class="spinner">&#x1f0a1;</span>
+            <span class="spinner spinner-unicode">&clubs;</span>
             <div class="card-overlay">
               <div class="card-overlay-content">
                 <p>Under Construction</p>
