--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           <h3>web-developer//copywriter</h3>
         </div>
       </div>
-      <div class="arrow">
+      <!-- <div class="arrow">
         <i class="fas fa-chevron-down"></i>
-      </div>
+      </div> -->
     </section>
     <section class="about" id="about">
       <h2>about</h2>
